--- a/CryptoFolio/CryptoFolio/MainPage.xaml
+++ b/CryptoFolio/CryptoFolio/MainPage.xaml
@@ -17,40 +17,51 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <Label
+            <Image
                 Grid.Row="0"
+                Grid.Column="0"
+                Aspect="AspectFit"
+                HorizontalOptions="End"
+                WidthRequest="24"
+                HeightRequest="24"
+                Source="{Binding ListIcon}">
+
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer
+                        Command="{Binding ListIconTapCommand}" />
+                </Image.GestureRecognizers>
+
+            </Image>
+
+            <Label
+                Grid.Row="1"
                 Grid.Column="0"
                 Text="{Binding TotalOutputString}"
                 HorizontalTextAlignment="Center"
                 FontSize="{Binding FONT_SIZE_MAIN_PAGE_HEADING}" />
 
             <Label
-                Grid.Row="1"
+                Grid.Row="2"
                 Grid.Column="0"
                 Text="{Binding TotalInputRatioString}"
                 HorizontalTextAlignment="Center"
                 FontSize="{Binding FONT_SIZE_MAIN_PAGE_SUBHEADING}" />
 
             <BoxView 
-                Grid.Row="2"
+                Grid.Row="3"
                 HeightRequest="1" 
                 BackgroundColor="Black"
                 HorizontalOptions="FillAndExpand" />
 
-            <!-- TODO -->
-            <Button 
-                x:Name="cmdLoadCoinList"
-                Grid.Row="3"
-                Text="Load Coin List"/>
-
             <ScrollView
-                Grid.Row="4"
+                Grid.Row="5"
                 Grid.Column="0">
 
                 <!-- COIN ENTRIES -->
