Add colors to percentage values in coin list

--- a/CryptoFolio/CryptoFolio/AllCoinsPage.xaml
+++ b/CryptoFolio/CryptoFolio/AllCoinsPage.xaml
@@ -25,7 +25,7 @@
 
                                 <Label Text="{Binding MainDisplayContent}"
                                        FontSize="16"
-                                       TextColor="Black"
+                                       TextColor="{Binding StatusColor}"
                                        VerticalOptions="StartAndExpand"/>
                             </StackLayout>
                         </ViewCell.View>
