--- a/CryptoFolio/CryptoFolio/Pages/AllCoins/AllCoinsPage.xaml
+++ b/CryptoFolio/CryptoFolio/Pages/AllCoins/AllCoinsPage.xaml
@@ -55,7 +55,7 @@
                                 <Label 
                                     Grid.Row="1"
                                     Grid.Column="1"
-                                    Text="{Binding MainDisplayContent}"
+                                    Text="{Binding DisplayValue}"
                                     FontSize="16"
                                     TextColor="{Binding StatusColor}"
                                     VerticalOptions="StartAndExpand"/>
