--- a/CryptoFolio/CryptoFolio/Pages/CoinDetails/CoinDetailPage.xaml
+++ b/CryptoFolio/CryptoFolio/Pages/CoinDetails/CoinDetailPage.xaml
@@ -44,7 +44,7 @@
                 Grid.Row="1"
                 Grid.Column="1"
                 VerticalOptions="FillAndExpand"
-                Text="{Binding CurrentRate}"
+                Text="{Binding DisplayValue}"
                 FontSize="20"
                 TextColor="Black"/>
 
