--- a/CryptoFolio/CryptoFolio/Pages/AllCoins/AllCoinsPage.xaml
+++ b/CryptoFolio/CryptoFolio/Pages/AllCoins/AllCoinsPage.xaml
@@ -8,8 +8,10 @@
             HorizontalOptions="FillAndExpand" 
             VerticalOptions="FillAndExpand" 
             AbsoluteLayout.LayoutBounds="0, 0, 1, 1">
-            <ListView x:Name="myList"
-            BackgroundColor="Gray"
+            <ListView x:Name="coinList"
+            AbsoluteLayout.LayoutBounds="0, 0, 1, 1"  
+            AbsoluteLayout.LayoutFlags="All" 
+            BackgroundColor="White"
             ItemsSource="{Binding Coins}"
             SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
             HasUnevenRows="true"
@@ -68,13 +70,12 @@
             x:Name="overlay" 
             AbsoluteLayout.LayoutBounds="0, 0, 1, 1"  
             AbsoluteLayout.LayoutFlags="All" 
-            IsVisible="True" 
-            BackgroundColor="#C0808080" 
+            IsVisible="{Binding IsLoading}" 
+            BackgroundColor="White" 
             Padding="10, 0">
                 <ActivityIndicator  
                 WidthRequest="110" 
                 HeightRequest="70" 
-                IsVisible="{Binding IsLoading}" 
                 IsRunning="{Binding IsLoading}"
                 Color="Black" 
                 HorizontalOptions="CenterAndExpand" 
