Add pull to refresh functionality

--- a/CryptoFolio/CryptoFolio/Pages/AllCoins/AllCoinsPage.xaml
+++ b/CryptoFolio/CryptoFolio/Pages/AllCoins/AllCoinsPage.xaml
@@ -16,7 +16,10 @@
             SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
             HasUnevenRows="true"
             RowHeight="-1"
-            IsVisible="{Binding ItemsLoaded}">
+            IsVisible="{Binding ItemsLoaded}"
+            IsPullToRefreshEnabled="True"
+            RefreshCommand="{Binding RefreshCommand}"
+           IsRefreshing="{Binding IsRefreshing}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
