--- a/CryptoFolio/CryptoFolio/Pages/CoinDetails/CoinDetailPage.xaml
+++ b/CryptoFolio/CryptoFolio/Pages/CoinDetails/CoinDetailPage.xaml
@@ -57,20 +57,51 @@
                 TextColor="{Binding StatusColor}"
                 HorizontalTextAlignment="End"/>
 
-            <Image
-                Grid.Row="3"
-                Grid.ColumnSpan="3"
-                HorizontalOptions="Center"
-                HeightRequest="48"
-                WidthRequest="48"
-                Source="{Binding PlusIcon}">
+            <ListView x:Name="coinList"
+            BackgroundColor="White"
+            ItemsSource="{Binding Investments}"
+            SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
+            HasUnevenRows="true"
+            RowHeight="-1"
+            IsVisible="{Binding ItemsLoaded}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <ViewCell.View>
+                                <Grid
+                                HorizontalOptions="FillAndExpand"
+                                VerticalOptions="StartAndExpand"
+                                Padding="15, 10, 10, 10"
+                                BackgroundColor="White">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="Auto" />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
 
-                <Image.GestureRecognizers>
-                    <TapGestureRecognizer
-                        Command="{Binding PlusIconTapCommand}" />
-                </Image.GestureRecognizers>
+                                    <Label
+                                    Grid.Row="0"
+                                    Grid.Column="0"
+                                    Text="{Binding TransactionTimestamp}"
+                                    FontSize="16"
+                                    TextColor="Black"
+                                    VerticalOptions="Center"/>
 
-            </Image>
+                                    <Label 
+                                    Grid.Row="1"
+                                    Grid.Column="1"
+                                    Text="{Binding FormattedDescription}"
+                                    FontSize="16"
+                                    TextColor="Black"
+                                    VerticalOptions="Center"/>
+                                </Grid>
+                            </ViewCell.View>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
