--- a/CryptoFolio/CryptoFolio/Pages/InvestmentPage.xaml
+++ b/CryptoFolio/CryptoFolio/Pages/InvestmentPage.xaml
@@ -98,7 +98,8 @@
                 Grid.Row="2"
                 Grid.Column="1"
                 Grid.ColumnSpan="2"
-                VerticalOptions="Center"/>
+                VerticalOptions="Center"
+                Date="{Binding TransactionDate}"/>
             
             <!-- Comment -->
 
