--- a/CryptoFolio/CryptoFolio/Pages/SplashscreenPage.xaml
+++ b/CryptoFolio/CryptoFolio/Pages/SplashscreenPage.xaml
@@ -48,7 +48,7 @@
                 Text="{Binding LoadingText}"
                 HorizontalTextAlignment="Center"
                 FontSize="{Binding RegularTextSize}"
-                TextColor="{Binding RegularTextColor}"/>
+                TextColor="{Binding LightTextColor}"/>
             
         </Grid>
     </ContentPage.Content>
