--- a/CryptoFolio/CryptoFolio/Pages/AllCoins/AllCoinsPage.xaml
+++ b/CryptoFolio/CryptoFolio/Pages/AllCoins/AllCoinsPage.xaml
@@ -11,7 +11,6 @@
             <ListView x:Name="coinList"
             AbsoluteLayout.LayoutBounds="0, 0, 1, 1"  
             AbsoluteLayout.LayoutFlags="All" 
-            BackgroundColor="White"
             ItemsSource="{Binding Coins}"
             SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
             HasUnevenRows="true"
@@ -27,8 +26,7 @@
                                 <Grid
                                 HorizontalOptions="FillAndExpand"
                                 VerticalOptions="StartAndExpand"
-                                Padding="15, 10, 10, 10"
-                                BackgroundColor="White">
+                                Padding="15, 10, 10, 10">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="Auto" />
