--- a/CryptoFolio/CryptoFolio/Pages/AllCoinsPage.xaml
+++ b/CryptoFolio/CryptoFolio/Pages/AllCoinsPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CryptoFolio.AllCoinsPage"
-             Title="All Coins">
+             Title="{Binding Title}">
     <ContentPage.Content>
         <AbsoluteLayout
             HorizontalOptions="FillAndExpand" 
