--- a/CryptoFolio/CryptoFolio/Pages/InvestmentPage.xaml
+++ b/CryptoFolio/CryptoFolio/Pages/InvestmentPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CryptoFolio.Pages.InvestmentPage"
-             Title="{Binding Header}">
+             Title="{Binding Title}">
     <ContentPage.Padding>
         <OnPlatform 
             x:TypeArguments="Thickness"                     
